# ai-warehouse-twin

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  WarehouseTwin.sln
.github/: CODEOWNERS
.local-untracked-backup/: track-b-collaborator-handoff.md
docs/: customer-report-demo.md  each-pick.md  track-b-collaborator-handoff.md  track-b-plan.md
scripts/: audit-unified-export-artifact-diff.sh  check-all.sh  check-consumer-no-core.sh  check-contract-drift.sh  check-ingestion-no-src.sh  check-no-unityengine.sh  check-track-a-r2-readiness.sh  gen-contracts.sh  generate_contracts.py  smoke-comparison-artifact.sh  smoke-customer-report-runner-provenance.sh  smoke-customer-report.sh  smoke-each-pick-export-artifact.sh  smoke-export-artifact.sh  (+13 more)
services/ingestion/: README.md  pyproject.toml
services/ingestion/ingestion/: __init__.py  __main__.py  cli.py  quality.py  schema.py  sources.py
services/ingestion/ingestion/adapters/: __init__.py  common.py  csv_excel.py  mock_wms.py
services/ingestion/tests/: test_cli.py  test_csv_excel_adapter.py  test_mock_wms_adapter.py  test_quality.py  test_schema.py  test_sources.py
services/runtime/: README.md  pyproject.toml
services/runtime/docs/: operator-smoke.md  runtime-phase1-status.md
services/runtime/runtime_service/: __init__.py  __main__.py  artifacts.py  cli.py  external.py  manifest.py  models.py  runner.py  simcli.py  store.py
services/runtime/tests/: test_artifacts.py  test_cli.py  test_external.py  test_manifest.py  test_models.py  test_runner.py  test_simcli.py  test_store.py
(+466 files in other folders)
